# linkedin_scraper

./: CLAUDE.md  FORK_CONTEXT.md  Justfile  README.md  pyproject.toml
docs/: README.md  integration-linkedin-mcp.md  local-dev-setup.md
docs/adr/: 001-playwright-over-official-api.md  002-headless-false-required.md  003-js-evaluation-over-locators.md  004-data-urn-stable-anchor.md  005-playwright-storage-state.md  006-pydantic-models.md  007-async-architecture.md  008-uv-just-toolchain.md  009-library-samples-separation.md  010-single-version-source.md  011-xvfb-linux-deployment.md  012-lnkd-url-resolution.md  013-mcp-integration-architecture.md  014-cdp-existing-browser.md  015-local-editable-install.md  README.md
linkedin_scraper/: __init__.py
linkedin_scraper/models/: post.py
linkedin_scraper/scrapers/: __init__.py  feed.py  person.py
samples/: scrape_feed.py  scrape_person.py
tests/: test_feed_scraper.py
