[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin_scraper"
version = "4.0.0"
description = "Async LinkedIn scraper for profiles, companies, jobs and feed — Playwright-based"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache 2.0" }
authors = [
    { name = "Vincent Lacombe" },
]
keywords = ["linkedin", "scraping", "scraper", "async", "playwright", "feed", "profiles", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/vinzlac/linkedin_scraper"
Documentation = "https://github.com/vinzlac/linkedin_scraper#readme"
Repository = "https://github.com/vinzlac/linkedin_scraper"
Issues = "https://github.com/vinzlac/linkedin_scraper/issues"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "twine>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["linkedin_scraper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: unit tests, no external services required",
    "integration: integration tests requiring linkedin_session.json",
    "slow: slow tests",
    "e2e: end-to-end tests requiring full setup",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
